# fmu_insight

./: .gitignore  build.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/: main.py
src/app/: main_window.py  state.py
src/app/components/: doe_setup.py  input_editor.py  menu_bar.py  metrics_setup.py  model_explorer.py  param_editor.py  param_table.py  prop_editor.py  prop_tree.py  result_view.py
src/app/schemas/: fmu.py  metrics_spec.py
tests/: test_app_state.py
tests/resources/: BouncingBall.fmu  QuarterCar.fmu
tests/resources/FMITest/: BouncingBall.mo  QuarterCar.mo  package.mo  package.order
tests/resources/FMITest/Examples/: ExampleQuarterCar.mo  package.mo  package.order
